public abstract class Objeto {
}
