interface DanioBala {
    int DANIO_NORMAL = 1;


}