public class Sierra extends Objeto {
	
	public static final int DOBLE = 2;

	public void usarSierra(Escopeta e) {
		e.esBalaSierra(true);
	}
}