@startuml
skinparam classAttributeIconSize 0

hide class circle
hide interface circle
hide abstract circle

class JFrame {
    - title : String
    - width : int
    - height : int
    - visible : boolean
    + JFrame( )
    + JFrame(String)
    + getHeight( ) : int
    + getWidth( ) : int
    + isVisible( ) : boolean
    + setSize(int, int) : void
    + setVisible(boolean) : void
}

class Tablero extends JFrame {
    + shotgun : ImageIcon
    + corazonLleno : ImageIcon
    + fondo : ImageIcon
    + imagenP1 : ImageIcon
    + imagenP2 : ImageIcon
    + balaAzulIcon : ImageIcon
    + balaRojaIcon : ImageIcon
    + cajaIcon : ImageIcon
    - imagenRedimensionada : Image
    - cajaRedimensionada : ImageIcon
    + imagenJugadorActual : JLabel
    + nombreJugadorActual : JLabel
    + panelVidasJ1 : JPanel
    + panelVidasJ2 : JPanel
    + panelInventario : JPanel
    + logEventos : JTextArea
    + logEventos2v : JScrollBar
    + escopeta : Escopeta
    + turnoJugador1 : boolean
    + jugador1 : Jugador
    + jugador2 : Jugador
    + Tablero()
    + createContents() : void
    + agregarTextoLog(String texto) : void
    + actualizarVidas(JPanel panelVidas, int vidas) : void
    + mostrarOpcionesEscopeta() : void
    + verificarGanador() : void
    + cambiarTurno(); : void
    + mostrarInventario(Jugador jugador) : void
    + seleccionar Inventario(Jugador jugador) : void
    + mostrarInformacionEscopeta(JTextArea logEventos) : void
    + usarCajaDelJugador(Jugador jugadorActual, Jugador jugador2, Escopeta escopeta) : void
    + repartirCajaJugador(Jugador jugador) : void
    + main(String[] args) : void
}

interface DanioBala <<interface>> {
    +int DANIO_NORMAL
}

class Escopeta implements DanioBala {
    - balas : ArrayList<String>
    - random : Random
    - balaSierra = false : boolean
    + Escopeta()
    + cargarBalas() : void
    + getMunicion() : ArrayList<String>
    + disparar(Jugador j) : void
    + esBalaSierra(boolean esSierra) : boolean
}

class Jugador{
    - nombre : String
    - vida=4 : int 
    - obs : CajaDeObjetos
    - esposado = false : boolean
    - botones : ArrayList<JButton>
    - objeto : Objeto
    - posicion : int
    + jugador(String nombre)
    + jugador()
    + aumentarVida () : void
    + reducirVida(int cantidad) : void
    + mostrarObjetos() : void
    + repartirObjetos() : void
    + seleccionarObjeto(CountDownLatch latch) : void
    + objeto_a_Usar() : Objeto
    + setEstaEsposado(boolean estaEsposado) : void
    + retornarPosicion() : int
    + estaEsposado() : boolean
    + getVida() : int
    + getNombre() : String
    + getCajaObjetos() : CajaDeObjetos
}

class Objeto {

}

class Cigarro extends Objeto {
    + utilizarCigarro(Jugador j) : void
}

class Lupa extends Objeto {
    + UsarLupa(Escopeta e) : void
    + crearContenedor(JFrame ventana, ArrayList<String> balas) : void
}

class Cerveza extends Objeto {
    - bala : String
    + UsarCerveza(Escopeta e, JFrame ventanaPrincipal) : void
    + crearContenedor(JFrame ventana) : void
}

class Adrenalina extends Objeto {
    - cofreArriba : ImageIcon
    - cofreAbajo : ImageIcon
    - panel1 : JPanel
    - panel2 : JPanel
    - botones : ArrayList<JButton>
    - enemigaObs : ArrayList<Objeto>
    - misObs : ArrayList<CajaDeObjetos>
    - ventana : JFrame;
    - cierreAutomatico : Timer
    - posicionAdrenalina : int
    + recibirCajaDelJugador(ArrayList<CajaDeObjetos> obs) : void
    + usarAdrenalina(CajaDeObjetos enemigo) : void
    + crearContenedor() : void
    + llenarBotones() : void
}

class Esposa extends Objeto {
    + static ESPOSADO = true : boolean
    + usarEsposa(Jugador j) : void
}

class Sierra extends Objeto {
    + static DOBLE = 2 : int
    + usarSierra(Escopeta e) : void
}

class CajaDeObjetos {
    - cofreArriba : ImageIcon
    - cofreAbajo : ImageIcon
    - caja : ArrayList<Objeto>
    - botones : ArrayList<JButton>
    - ventana : JFrame
    - panel1 : JPanel
    - panel2 : JPanel
    - static MAX_OBJETOS = 8 : int
    + entregarCaja() : void
    + mostrarCaja() : void
    + crearContenedor() : void
    + llenarBotones() : void
    + getCaja() : ArrayList<Objeto>
    + getBotones() : ArrayList<JButton>
    + getVentana() : JFrame
    + modificarBotones(JButton boton) : void
    + redimensionarImagen(String path) : ImageIcon
    + reproducirSonido(String sonidoCargarBalas) : void
}

Tablero ..> Jugador
Tablero ..> Escopeta
Objeto --* Jugador
CajaDeObjetos --* Jugador
Objeto --* CajaDeObjetos
CajaDeObjetos --* Adrenalina
@enduml

